dementsia why did you time me out
dementia what did i do

--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5555,6 +5555,7 @@ ROM_restructure_our_logistics_desc:0 "With Romania's needs of armed forces expan
 ROM_slow_and_steady_wins_the_race:0 "Slow and Steady Wins the Race"
 ROM_social_welfare:0 "Social Welfare"
 ROM_new_times:0 "New Times"
+ROM_new_times_desc:0 "The Great War has ended, but the toll it took on our nation was immense. Inflation is spiraling, and the shadow of war still lingers in the minds of our people. The future may seem uncertain, but we hold the power to change it. A new era is on the horizon, and we must rise to meet it."
 ROM_the_lame_duck:0 "The Lame Duck"
 ROM_restore_romanian_pride:0 "Restore Romanian Pride"
 ROM_reunify_the_conservatives:0 "Reunify the Conservatives"
@@ -5634,7 +5635,7 @@ ROM_back_in_couple_of_days.tt:0 "§YThis engineer will be back with his design i
 ROM_different_buffs_aircraft.tt:0 "§WDepending on who you choose, you will get different buffs related to Air Technology.§W§W"
 ROM_commission_air_name1:0 "§YCommissioned Aurel Vlaicu §Y§W"
 ROM_commission_air_name2:0 "§YCommissioned Traian Vuia §Y§W"
-ROM_pave_the_way_for_industrial_expansion:0 "Pave the W ay for Industrial Expansion"
+ROM_pave_the_way_for_industrial_expansion:0 "Pave the Way for Industrial Expansion"
 ROM_tackle_unemployment:0 "Tackle Unemployment"
 ROM_transistion_away_from_wartime_jobs:0 "Transition Away From Wartime Jobs"
 
