--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5104,7 +5104,7 @@ ww1_romania.23.t:0 "Mass Protests on the Streets"
 ww1_romania.23.d:0 "With our refusal to resign, the PNL has organized mass protests against our government. Rioting has broken out in Bucharest with tens of thousands demanding the PC step down from power. With this, the King has increasingly began weighing his options. Its clear the king is increasingly seeing us as unable to govern, and if we don't fix this issue soon we see our government collapse!"
 ww1_romania.22.t:0 "High Courts Find No Wrong Doings From Tramcar Society"
 ww1_romania.22.d:0 "After a PNL law suit, the shutdown of the Tramcar Society has been repealed by Romanias high court. These courts are clearly corrupted, stacked with PNL loyalists. The PNL has, as a result of this ruling, claimed our government should resign in shame. Many anti Carp conservatives have joined the PNL's calls for Carp to resign, and talks of organizing mass protests have began."
-ww1_romania.22.a:0 "We'll shut dowm this corrupt court soon enough!"
+ww1_romania.22.a:0 "We'll shut down this corrupt court soon enough!"
 ww1_romania.21.t:0 "Shutting Down the Tramcar Society"
 ww1_romania.21.d:0 "The PNL is famously corrupt, corrupt to the core. We are better safer then sorry on the issue of corruption, and thus we must be vigilant. The 'Tramcar Society' has openly supported the PNL multiple times, and there are many rumors that they have illegally embezzled money for the PNL. Thus, we shall forefully dissolve this corrupt institution."
 ww1_romania.21.a:0 "Good! We must continue actions like this"
@@ -5722,7 +5722,7 @@ ROM_french_weapons_withdrawn.tt:0 "We will §Rlose§! the military factory from 
 ROM_german_weapons_withdrawn.tt:0 "We will §Rlose§! the military factory from the focus "§YKrupp Weapon Purchases§!""
 
 
-ROM_postwar.tt:0 "Modify §YRomanian Economy §Y§Wby:\n£factory_output_texticon Factory Output:§W§G +15.00% §G\n£consumer_goods_texticon §WConsumer Goods factor§W: §Y+40.0%§Y\n£political_power_cost_texticon §WDaily Political Power Cost§W: §R-0.05§R  \n£arms_factory_production_speed_texticon §WMilitary Factory Construction Speed§W: §G+15.00%§G§W\n£stability_texticon Gain Base Stability:§W§R -0.15.00%§WR§WW"
+ROM_postwar.tt:0 "Modify §YRomanian Economy §Y§Wby:\n£factory_output_texticon Factory Output:§W§G +15.00% §G\n£consumer_goods_texticon §WConsumer Goods factor§W: §Y+40.0%§Y\n£political_power_cost_texticon §WDaily Political Power Cost§W: §R-0.05§R  \n£arms_factory_production_speed_texticon §WMilitary Factory Construction Speed§W: §G+15.00%§G§W\n£stability_texticon Gain Base Stability:§W§R -15.00%§R§W"
 ROM_spike_interest.tt:0 "Modify §YRomanian Economy §Y§Wby:\n£consumer_goods_texticon Consumer Goods factor: §Y-10.0%§Y§W\n£construction_speed_texticon Construction Speed:§W§R -5.00%§R§W\n£political_power_cost_texticon Daily Political Power Gain:§W§G +0.10§G§W"
 ROM_price_controls.tt:0 "Modify §YRomanian Economy §Y§Wby:\n£consumer_goods_texticon Consumer Goods factor: §Y-10.0%§Y§W\n£political_power_cost_texticon Daily Political Power Gain:§W§R -0.15§R§W"
 ROM_strengthen_leu.tt:0 "Modify §YRomanian Economy §Y§Wby:\n£consumer_goods_texticon Consumer Goods factor: §Y-5.0%§Y§W\n£factory_output_texticon Factory Output:§W §R-5.00%§R§W \n£stability_texticon Gain Base Stability:§W§G +2.50%§G§W"
