--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5722,7 +5722,7 @@ ROM_french_weapons_withdrawn.tt:0 "We will §Rlose§! the military factory from 
 ROM_german_weapons_withdrawn.tt:0 "We will §Rlose§! the military factory from the focus "§YKrupp Weapon Purchases§!""
 
 
-ROM_postwar.tt:0 "Modify §YRomanian Economy §Y§Wby:\n£factory_output_texticon Factory Output:§W§G +15.00% §G\n£consumer_goods_texticon §WConsumer Goods factor§W: §Y+40.0%§Y\n£political_power_cost_texticon §WDaily Political Power Cost§W: §R-0.05§R  \n£arms_factory_production_speed_texticon §WMilitary Factory Construction Speed§W: §G+15.00%§G§W\n£stability_texticon Gain Base Stability:§W§R -15.00%§R§W"
+ROM_postwar.tt:0 "Modify §YRomanian Economy §Y§Wby:\n£factory_output_texticon Factory Output:§W§G +15.00% §G\n£consumer_goods_texticon §WConsumer Goods factor§W: §Y+40.0%§Y\n£political_power_cost_texticon §WDaily Political Power Gain§W:§R -0.05§R  \n£construction_speed_texticon §WConstruction Speed§W: §G+15.00%§G§W\n£stability_texticon Gain Base Stability:§W§R -15.00%§R§W"
 ROM_spike_interest.tt:0 "Modify §YRomanian Economy §Y§Wby:\n£consumer_goods_texticon Consumer Goods factor: §Y-10.0%§Y§W\n£construction_speed_texticon Construction Speed:§W§R -5.00%§R§W\n£political_power_cost_texticon Daily Political Power Gain:§W§G +0.10§G§W"
 ROM_price_controls.tt:0 "Modify §YRomanian Economy §Y§Wby:\n£consumer_goods_texticon Consumer Goods factor: §Y-10.0%§Y§W\n£political_power_cost_texticon Daily Political Power Gain:§W§R -0.15§R§W"
 ROM_strengthen_leu.tt:0 "Modify §YRomanian Economy §Y§Wby:\n£consumer_goods_texticon Consumer Goods factor: §Y-5.0%§Y§W\n£factory_output_texticon Factory Output:§W §R-5.00%§R§W \n£stability_texticon Gain Base Stability:§W§G +2.50%§G§W"
