--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5419,7 +5419,7 @@ ROM_for_the_truth:0 "For Romania! For the Truth!"
 ROM_for_the_truth_desc:0 "The war with Austria is a war of liberation for the oppressed Romanians in Hungary. We must strengthen our troops resolve and reach out to Romanians in Austria Hungary who are currently being oppressed, and get them to fight on the side of truth and liberation!"
 ROM_lessons_from_carpathian_defense:0 "Against All Odds!"
 ROM_lessons_from_carpathian_defense_desc:0 ""
-ROM_the_great_war_redux:0 "The Great War Redux"
+ROM_the_great_war_redux:0 "The World in Flames"
 ROM_the_great_war_redux_desc:0 "Once again, France and Germany are engaging in all out war. While the last war between the great powers was contained amongst themselves, this time they're joined by half of the world. With our key position in Europe, its unlikely we can avoid being involved, thus we must consider our options. While the Entente would probably promise the largest land gain, is our army really ready to face Austria? We'd likely have an easier time with the Central Powers, but is it worth abandoning our ambitions on Transylvania for the near future? "
 ROM_our_call_to_arms:0 "Our Call to Arms"
 ROM_our_call_to_arms_desc:0 ""
@@ -5698,6 +5698,8 @@ ROM_tdga:0 "Modify §YRomanian Economy§! by\n£political_power_cost_texticon Da
 ROM_si.tt:0 "Modify §YRomanian Economy§! by\n£political_power_cost_texticon Daily Political Power Cost: §R+0.10§!\n£construction_speed_texticon Construction Speed: §G+5.00%§!"
 ROM_gati:0 "Modify §YRomanian Economy§! by\n£political_power_cost_texticon Daily Political Power Cost: §R+0.05§!\n£consumer_goods_texticon Consumer Goods Factories factor: §Y+5.0%§!"
 ROM_cttd:0 "Modify §YRomanian Economy§! by\n£political_power_cost_texticon Daily Political Power Cost: §G-0.05§!\n£consumer_goods_texticon Consumer Goods Factories factor\: §Y-5.0%§!"
+ROM_reduce_reliance.tt:0 "Modify §YRomanian Economy§! by\n£political_power_cost_texticon Daily Political Power Cost: §R+0.10§!"
+ROM_fftf:0 "Modify §YRomanian Economy §Y§Wby:\n£factory_output_texticon Factory Output:§W§G +5.00%"
 ww1_romania.41.t:0 "Germany Demands Concessions For Continued Arms Exports"
 ww1_romania.41.d:0 "With the majority of our weapon purchases coming from Germany, the Kaiser has decided to use this leverage to demand a series of concessions on us. They are saying that if we don't increase trade and even allow them to use some of our railways to transport supplies to Bulgaria, they will cut off arms exports. While it would be a violation of our neutrality, we may not really be in a position to say no."
 ww1_romania.41.a:0 "These terms aren't that bad"
