"Cerchez & Co." Focus Tooltip rework + icons + loc + yw sussy and leaf
dementia i have i forgor

--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5638,6 +5638,18 @@ ROM_commission_air_name2:0 "§YCommissioned Traian Vuia §Y§W"
 ROM_pave_the_way_for_industrial_expansion:0 "Pave the Way for Industrial Expansion"
 ROM_tackle_unemployment:0 "Tackle Unemployment"
 ROM_transistion_away_from_wartime_jobs:0 "Transition Away From Wartime Jobs"
+ROM_a_question_of_priorities:0 "A Question of Priorities"
+ROM_general_army_inspectorate:0 "General Army Inspectorate"
+ROM_prioritise_economic_growth:0 "Prioritize Economic Growth"
+ROM_reduce_reliance_on_world:0 "Reduce Reliance on Imports"
+ROM_prioritise_industrialisation:0 "Prioritize Industrialisation"
+ROM_from_farms_to_factories:0 "From Farms to Factories"
+ROM_french_grain_deal:0 "French Grain Deal"
+ROM_ottoman_maize_deal:0 "Ottoman Maize Deal"
+ROM_bulgarian_grain_exports:0 "Export Grain to Bulgaria"
+ROM_army_focus1:0 "Army Focus"
+ROM_army_focus2:0 "Army Focus"
+ROM_army_focus3:0 "Army Focus"
 
 
 
