Romania ideas icons rework

--- a/localisation/english/ww1_ideas_l_english.yml
+++ b/localisation/english/ww1_ideas_l_english.yml
@@ -2877,8 +2877,7 @@ VIN_administration_indigene_desc:0 "Part of the indigenous elites are now member
  ROM_full_male_suffrage:0 "Full Male Suffrage"
  ROM_the_natural_enemy_idea:0 "The Natural Enemy"
  ROM_social_welfare_idea:0 "State-Funded Social Welfare"
-ROM_local_autonomy_in_new_territories_idea:0 "Temporary Local Autonomy in New Territories"
-ROM_postwar_economy:0 "Postwar Economy"
+ROM_abandon_federalism_idea:0 "Abandon Federalism"
 
  #PERU
  PRU_aristocratic_republic:0 "Aristocratic Republic"
