--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5647,9 +5647,9 @@ ROM_from_farms_to_factories:0 "From Farms to Factories"
 ROM_french_grain_deal:0 "French Grain Deal"
 ROM_ottoman_maize_deal:0 "Ottoman Maize Deal"
 ROM_bulgarian_grain_exports:0 "Export Grain to Bulgaria"
-ROM_army_focus1:0 "Army Focus"
-ROM_army_focus2:0 "Army Focus"
-ROM_army_focus3:0 "Army Focus"
+ROM_army_focus1:0 "Reorganize Battalions "
+ROM_army_focus2:0 "Review Our Tactics"
+ROM_army_focus3:0 "Restructure the Hierarchy "
 
 
 
@@ -5710,7 +5710,7 @@ ROM_tdga:0 "Modify §YRomanian Economy§! by\n£political_power_cost_texticon Da
 ROM_si.tt:0 "Modify §YRomanian Economy§! by\n£political_power_cost_texticon Daily Political Power Cost: §R+0.10§!\n£construction_speed_texticon Construction Speed: §G+5.00%§!"
 ROM_gati:0 "Modify §YRomanian Economy§! by\n£political_power_cost_texticon Daily Political Power Cost: §R+0.05§!\n£consumer_goods_texticon Consumer Goods Factories factor: §Y+5.0%§!"
 ROM_cttd:0 "Modify §YRomanian Economy§! by\n£political_power_cost_texticon Daily Political Power Cost: §G-0.05§!\n£consumer_goods_texticon Consumer Goods Factories factor\: §Y-5.0%§!"
-ROM_reduce_reliance.tt:0 "Modify §YRomanian Economy§! by\n£political_power_cost_texticon Daily Political Power Cost: §R+0.10§!"
+ROM_reduce_reliance.tt:0 "Modify §YRomanian Economy§! by\n£political_power_cost_texticon Daily Political Power Cost: §G-0.10§!"
 ROM_fftf:0 "Modify §YRomanian Economy §Y§Wby:\n£factory_output_texticon Factory Output:§W§G +5.00%"
 ww1_romania.41.t:0 "Germany Demands Concessions For Continued Arms Exports"
 ww1_romania.41.d:0 "With the majority of our weapon purchases coming from Germany, the Kaiser has decided to use this leverage to demand a series of concessions on us. They are saying that if we don't increase trade and even allow them to use some of our railways to transport supplies to Bulgaria, they will cut off arms exports. While it would be a violation of our neutrality, we may not really be in a position to say no."
