--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5054,6 +5054,11 @@ complete_bbore:0 "Completing the focus '§YNew Agricultural Techniques§'! will 
  ww1_romania.28.b:0 "The liberation of Moldova awaits!"
 ww1_romania.1.d:0 "The Romanian constitution of 1866 has often been praised as one of the most modern constitutions in the world at the time, with seperation of powers, an abolished death penalty, guaranteed private property, freedom of speech, and total freedom of the press. However, the Romanian constitution has had very little change since then, and thus Romania has fallen from one of the most democratic countries at its time, to the flawed constitutional monarchy it is now.\n\nWhether this is a positive or negative development for Romania is debatable, but one thing can be agreed upon by everyone: King Carol's influence on the Romanian political system is immense, and has grown in recent times. King Carol has often simply rotated between forming a government with the liberal PNL, and the conservative PC, as well as the recently formed moderate PCD. This has lead to little actual reform in Romania, as opposing political parties overturn much of the reforms the last government passed. This culminated in a revolt by angry peasants in 1907, angered by the little reform passed by any government. Thus, King Carol has taken a new course, appointing a liberal government that has governed the country for the last 3 years straight, passing a suprisingly large amount of reforms as of recent, which has kept the peasants in line for now.\n\nWith the 1911 elections approaching, King Carols confidence in the liberals and their ability to govern has declined. Seeing it as time for a new party to get a chance to rule Romania, King Carol has been flirting with the idea of appoiting a conservative government, or at least supporting the conservatives in the elections."
 ww1_romania.1.a:0 "The king is a very wise man"
+kis_news.144.t:0 "Petre Carp Forms Government in Romania"
+kis_news.144.d:0 "With the results of Romanias recent elections in, Petre Carps conservative party has captured a majority in parliament. Thus, King Carol has given them the task of forming a government. Notably, Petre Carp has long been a Germophile and has written several works calling for the 'liberation' of Moldova from the Russian Empire. With this, many are expecting Romania to draw closer to Germany. Even more concerningly for the entente, Carp has shown authoritarian tendencies in the past and in his current rhetoric, and thus it's unknown if Carp would be willing to give up power."
+kis_news.144.a:0 "Is he a threat to Romanian democracy?"
+kis_news.144.b:0 "Lets hope his government falls!"
+kis_news.144.c:0 "We wish him well!"
 ww1_romania.1.b:0 "Lets hope he doesn't undermine Romanian democracy..."
 ww1_romania.2.t:0 "The Brătianu Land Reform Bill - Debate Begins"
 ww1_romania.5.a:0 "What a disaster!"
@@ -5261,7 +5266,7 @@ ww1_romania.49.d:0 "While it was closer then we would have liked, the results fo
 ww1_romania.49.a:0 "Expected, of course!"
 
 ww1_romania.50.t:0 "1911 Elections - The PC Flips Parliament"
-ww1_romania.50.d:0 "It wasn't the result we hoped for, but the PC has won enough precentage of the vote to capture a plurality in parliament. With this, King Carol has appointed Petre Carp to form a government."
+ww1_romania.50.d:0 "It wasn't the result we hoped for, but the PC has won enough precentage of the vote to capture a plurality in parliament. With this, King Carol has appointed Petre Carp to form a government. "
 ww1_romania.50.a:0 "We will come back at some point!"
 
 ww1_romania.51.t:0 "1911 Elections - No Party Can Form a Government"
