--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5059,6 +5059,11 @@ kis_news.144.d:0 "With the results of Romanias recent elections in, Petre Carps 
 kis_news.144.a:0 "Is he a threat to Romanian democracy?"
 kis_news.144.b:0 "Lets hope his government falls!"
 kis_news.144.c:0 "We wish him well!"
+kis_news.145.t:0 "PNL Government in Romania"
+kis_news.145.d:0 "Today the King tasked the liberal PNL party of Romania to form a new government. Notably, many in the PNL are outspoken francophiles, and thus many expect this new government may draw closer to the Entente. This would prove a big blow to the Central Powers, which has heavily influenced Romania in the past. Already, the new government has began outreach to France, and suprisingly, Russia, to strengthen ties. Although nothing is guaranteed, this seems to be a big blow to Germany."
+kis_news.145.a:0 "It would certainly shake things up"
+kis_news.145.b:0 "Great!"
+kis_news.145.c:0 "Nothing is guarenteed!"
 ww1_romania.1.b:0 "Lets hope he doesn't undermine Romanian democracy..."
 ww1_romania.2.t:0 "The Brătianu Land Reform Bill - Debate Begins"
 ww1_romania.5.a:0 "What a disaster!"
