--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5710,9 +5710,15 @@ ROM_prah_f3.tt:0 "Modify §YRomanian Economy§! by\n£factory_output_texticon Ma
 ROM_revitalization_of_the_north:0 "Economic Revitalization of the North"
 ROM_cte.tt:0 "Modify §YRomanian Economy§! by\n£construction_speed_texticon Construction Speed: §G+5.00%§!\n£consumer_goods_texticon Consumer Goods Factories factor: §Y+10.0%§!"
 ROM_mafa:0 "Modify §YRomanian Economy§! by\n£construction_speed_texticon Construction Speed: §G+5.00%§!\n£consumer_goods_texticon Consumer Goods Factories factor: §Y+5.0%§!"
+ROM_efi:0 "Modify §YRomanian Economy§! by\n£construction_speed_texticon Construction Speed: §G+5.00%§!"
+
 ROM_mil_speed_1:0 "Modify §YRomanian Economy§! by\n§YMilitary Factory§! construction speed: §G+10.00%§!"
 ROM_mil_speed_2:0 "Modify §YRomanian Economy§! by\n§YMilitary Factory§! construction speed: §G+15.00%§!\nStability: §R-10.00%§!"
-ROM_ift.tt:0 "Modify §YRomanian Economy§! by\n£factory_output_texticon Factory Output: §G+5.00%§!\n£political_power_cost_texticon Daily Political Power Cost: §R+0.05§W"
+ROM_ift.tt:0 "Modify §YRomanian Economy§! by\n£factory_output_texticon Factory Output: §G+5.00%§!\n£political_power_cost_texticon Daily Political Power Cost: §R+0.05§!"
+
+ROM_txp.tt:0 "Modify §YRomanian Economy§! by\n£political_power_cost_texticon Daily Political Power Cost: §R+0.15§!\nConsumer Goods Factories factor: §Y-15.0%§!\nStability: §G+5.00%§!"
+
+
 ROM_ice.tt:0 "Modify §YRomanian Economy§! by\n£consumer_goods_texticon Consumer Goods Factories factor: §Y-5.0%§!"
 ROM_edd.tt:0 "Modify §YRomanian Economy§! by\n£dockyard_output_texticon Dockyard Output: §G+5.00%§!"
 ROM_agricultural_knowledge.tt:0 "Modify §YRomanian Economy§! by\n£political_power_cost_texticon Daily Political Power Cost: §R+0.05§!\n£consumer_goods_texticon Consumer Goods Factories factor: §Y-7.0%§!"
