super important bug fix

--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -4840,6 +4840,14 @@ kis_news.143.a:0 "Will the revolution spread to Western Europe?"
  ottoman.146.t:0 "Unintended Consequences"
  ottoman.146.d:0 "Recent land handover to Kurds that is populated by Armenians have resulted in Kurdish tribes massacring minority Christians and looting their villages for their own ends. This event will result inn numerous deaths."
  ottoman.146.a:0 "Human nature at its best."
+ ottoman.147.t: "Ottoman Pashas Sail for Tripolitania"
+ ottoman.147.d: "Due to the sheer size of the Italian navy, our central government struggles to send troops through the ocean. Yet this was no issue for some of the Ottoman officers to go and join the fighting. Being undercover, some of our pashas have voluntarily joined the Libyan war disguised as journalists."
+ ottoman.147.a: "Good luck pashas."
+ ottoman_pashas_in_libya: "§YIsmail Enver Bey§!([TUR.GetFlag]) and §YMustafa Kemal Paşa§!([TUR.GetFlag]) will join the fighting in Libya, making them §Runavailable§! for the time being.\n\n§ROur generals will return after the conclusion of the war, yet it'll take some time even after all the fighting is done.§!"
+ ottoman.148.t: "Return of the Ottoman Pashas"
+ ottoman.148.d: "Even though it took some time for our pashas to return to their duties even after the war in Tripolitania has been concluded, they're finally back. With their newly learned experties, they'll be more than successful forecoming conflicts."
+ ottoman.148.a: "Welcome home, pasha."
+ ottoman_pashas_back_from_libya: "§YIsmail Enver Bey§!([TUR.GetFlag]) and §YMustafa Kemal Paşa§!([TUR.GetFlag]) is once again available."
 
  ottoman_syria.1.t:0 "Küçük Cemal to Syria"
  ottoman_syria.1.d:0 "As the 4th army is being organized in Syria, governor responsible of the Syrian provinces [TRS.GetLeader] has requested the appointment of Mehmed Cemal Paşa. In order to provide a greater military presence in the region, Küçük Cemal Paşa will be appointed to Syria."
@@ -5807,9 +5815,9 @@ kis_news.143.a:0 "Will the revolution spread to Western Europe?"
  ww1_ottoman.137.d: "Due to the sheer size of the Italian navy, our central government struggles to send troops through the ocean. Yet this was no issue for some of the Ottoman officers to go and join the fighting. Being undercover, some of our pashas have voluntarily joined the Libyan war disguised as journalists."
  ww1_ottoman.137.a: "Good luck pashas."
  ottoman_pashas_in_libya: "§YIsmail Enver Bey§!([TUR.GetFlag]) and §YMustafa Kemal Paşa§!([TUR.GetFlag]) will join the fighting in Libya, making them §Runavailable§! for the time being.\n\n§ROur generals will return after the conclusion of the war, yet it'll take some time even after all the fighting is done.§!"
- ww1_ottoman.138.t: "Return of the Ottoman Pashas"
- ww1_ottoman.138.d: "Even though it took some time for our pashas to return to their duties even after the war in Tripolitania has been concluded, they're finally back. With their newly learned experties, they'll be more than successful forecoming conflicts."
- ww1_ottoman.138.a: "Welcome home, pasha."
+ ottoman.148.t: "Return of the Ottoman Pashas"
+ ottoman.148.d: "Even though it took some time for our pashas to return to their duties even after the war in Tripolitania has been concluded, they're finally back. With their newly learned experties, they'll be more than successful forecoming conflicts."
+ ottoman.148.a: "Welcome home, pasha."
  ottoman_pashas_back_from_libya: "§YIsmail Enver Bey§!([TUR.GetFlag]) and §YMustafa Kemal Paşa§!([TUR.GetFlag]) is once again available."
  ww1_ottoman.139.t: "Harbiyeli Officers Protests War Decisions"
  ww1_ottoman.139.d: "As our empire once agains plunges into a war, the highly politicized Harbiyeli officers state their discontent with the status and the command of the armed forces. Due to the highly politicized nature of the officers, some of them even refuse to comply with the given orders."
