--- a/localisation/russian/ww1_events_l_russian.yml
+++ b/localisation/russian/ww1_events_l_russian.yml
@@ -5559,11 +5559,11 @@ BUL_FRA_alliance:0 "Franco-Bulgarian Alliance"
  ww1_ottoman.137.t:0 "[GetYear] Constantinople Conference" 
  ww1_ottoman.137.d:0 "Treaty of Batum had secured the Caucasus front and national border had been drawn. Nonetheless, the circumstances in the Caucasus remained chaotic and unsettled. Following the end of the Weltkrieg, most fighting across Europe had largely ceased, however, in the Caucasus peace was nowhere in sight. To prevent the escalation of the situation, we should hold a multinational conference in [TUR.Capital.GetCapitalVictoryPointName] which have the aim to settle the various border disputes in the Caucasus once and for all and establish peace, while simultaneously ensuring that our interests in the region being respected.\nThe major issue is Armenian status of independence, where nations reluctantly agreed to stabilize them as an independent state in the last treaty, but now we will sacrifice Armenia for the Turkish benefits." 
  ww1_ottoman.137.a:0 "Let's deal it." 
- ww1_ottoman.138.t:0 "[GetYear] Constantinople Conference - Negotiations" 
- ww1_ottoman.138.d:0 "Treaty of Batum had secured the Caucasus front and national border had been drawn. Nonetheless, the circumstances in the Caucasus remained chaotic and unsettled. Following the end of the Weltkrieg, most fighting across Europe had largely ceased, however, in the Caucasus peace was nowhere in sight. To prevent the escalation of the situation, the [TUR.GetAdjective]s holds a multinational conference in [TUR.Capital.GetCapitalVictoryPointName] which have the aim to settle the various border disputes in the Caucasus once and for all and establish peace, while simultaneously ensuring that Turkish interests in the region being respected.\nThe major issue is Armenian status of independence, where nations reluctantly agreed to stabilize them as an independent state in the last treaty." 
- ww1_ottoman.138.a:0 "Demand a border territory for exchange." 
- ww1_ottoman.138.b:0 "That's a good deal." 
- ww1_ottoman.138.c:0 "We respect independence of Armenia." 
+ ottoman.148.t:0 "[GetYear] Constantinople Conference - Negotiations" 
+ ottoman.148.d:0 "Treaty of Batum had secured the Caucasus front and national border had been drawn. Nonetheless, the circumstances in the Caucasus remained chaotic and unsettled. Following the end of the Weltkrieg, most fighting across Europe had largely ceased, however, in the Caucasus peace was nowhere in sight. To prevent the escalation of the situation, the [TUR.GetAdjective]s holds a multinational conference in [TUR.Capital.GetCapitalVictoryPointName] which have the aim to settle the various border disputes in the Caucasus once and for all and establish peace, while simultaneously ensuring that Turkish interests in the region being respected.\nThe major issue is Armenian status of independence, where nations reluctantly agreed to stabilize them as an independent state in the last treaty." 
+ ottoman.148.a:0 "Demand a border territory for exchange." 
+ ottoman.148.b:0 "That's a good deal." 
+ ottoman.148.c:0 "We respect independence of Armenia." 
  ww1_ottoman.139.t:0 "[GetYear] Constantinople Conference - Georgia demands Meskheti-Javakheti" 
  ww1_ottoman.139.d:0 "[GEO.GetNameDefCap] demands a border territory in exchange of ignoring Armenia in conference." 
  ww1_ottoman.139.a:0 "Acceptable." 
