Vyborg/Revel fix

--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -184,8 +184,8 @@
  VICTORY_POINTS_3083: "Åbo"
  VICTORY_POINTS_3122: "Nikolajstadt"
  VICTORY_POINTS_3137: "Tammerfors"
- VICTORY_POINTS_9206: "Revel"
- VICTORY_POINTS_3152: "Tallinn"
+ VICTORY_POINTS_9206: "Vyborg"
+ VICTORY_POINTS_3152: "Revel"
  VICTORY_POINTS_9221: "Yuriev"
  VICTORY_POINTS_9340: "Rīga"
  VICTORY_POINTS_310: "Dvinsk"
