new icons for romania

--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5660,7 +5660,7 @@ ROM_bulgarian_grain_exports:0 "Export Grain to Bulgaria"
 ROM_army_focus1:0 "Reorganize Battalions "
 ROM_army_focus2:0 "Review Our Tactics"
 ROM_army_focus3:0 "Restructure the Hierarchy "
-
+ROM_building_a_domestic_arms_industry:0 "Build a Domestic Arms Industry"
 
 
 
