--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5714,6 +5714,10 @@ ROM_efi:0 "Modify §YRomanian Economy§! by\n£construction_speed_texticon Const
 
 ROM_mil_speed_1:0 "Modify §YRomanian Economy§! by\n§YMilitary Factory§! construction speed: §G+10.00%§!"
 ROM_mil_speed_2:0 "Modify §YRomanian Economy§! by\n§YMilitary Factory§! construction speed: §G+15.00%§!\nStability: §R-10.00%§!"
+
+
+ROM_mifocus:0 "Modify §YRomanian Economy§! by\nStability: §G+5.00%§!\nProduction Efficiency growth: §G+5.00%§!"
+
 ROM_ift.tt:0 "Modify §YRomanian Economy§! by\n£factory_output_texticon Factory Output: §G+5.00%§!\n£political_power_cost_texticon Daily Political Power Cost: §R+0.05§!"
 
 ROM_txp.tt:0 "Modify §YRomanian Economy§! by\n£political_power_cost_texticon Daily Political Power Cost: §R+0.15§!\nConsumer Goods Factories factor: §Y-15.0%§!\nStability: §G+5.00%§!"
