--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5709,6 +5709,9 @@ ROM_prah_f3.tt:0 "Modify §YRomanian Economy§! by\n£factory_output_texticon Ma
 
 ROM_revitalization_of_the_north:0 "Economic Revitalization of the North"
 ROM_cte.tt:0 "Modify §YRomanian Economy§! by\n£construction_speed_texticon Construction Speed: §G+5.00%§!\n£consumer_goods_texticon Consumer Goods Factories factor: §Y+10.0%§!"
+
+ROM_otb.tt:0 "Modify §YRomanian Economy§! by\n£consumer_goods_texticon Consumer Goods Factories factor: §Y-10.0%§!"
+
 ROM_mafa:0 "Modify §YRomanian Economy§! by\n£construction_speed_texticon Construction Speed: §G+5.00%§!\n£consumer_goods_texticon Consumer Goods Factories factor: §Y+5.0%§!"
 ROM_efi:0 "Modify §YRomanian Economy§! by\n£construction_speed_texticon Construction Speed: §G+5.00%§!"
 
@@ -5720,7 +5723,7 @@ ROM_mifocus:0 "Modify §YRomanian Economy§! by\nStability: §G+5.00%§!\nProduc
 
 ROM_ift.tt:0 "Modify §YRomanian Economy§! by\n£factory_output_texticon Factory Output: §G+5.00%§!\n£political_power_cost_texticon Daily Political Power Cost: §R+0.05§!"
 
-ROM_txp.tt:0 "Modify §YRomanian Economy§! by\n£political_power_cost_texticon Daily Political Power Cost: §R+0.15§!\nConsumer Goods Factories factor: §Y-15.0%§!\nStability: §G+5.00%§!"
+ROM_txp.tt:0 "Modify §YRomanian Economy§! by\n£political_power_cost_texticon Daily Political Power Cost: §R+0.15§!\nConsumer Goods Factories factor: §Y-10.0%§!\nStability: §G+5.00%§!"
 
 
 ROM_ice.tt:0 "Modify §YRomanian Economy§! by\n£consumer_goods_texticon Consumer Goods Factories factor: §Y-5.0%§!"
