alaska vp stuff

--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -1910,6 +1910,7 @@
  VICTORY_POINTS_3704: "Izmail"
  VICTORY_POINTS_3407: "Khotyn"
  VICTORY_POINTS_6600: "Bălti"
+ VICTORY_POINTS_13203: "Juneau"
 
 
  PETROGRAD_PROV: "Petrograd"
