--- a/localisation/russian/state_names_l_russian.yml
+++ b/localisation/russian/state_names_l_russian.yml
@@ -11,7 +11,7 @@
  STATE_10: "Варшава"
  STATE_11: "Каунас"
  STATE_12: "Рига"
- STATE_13: "Ревел"
+ STATE_13: "Ревель"
  STATE_14: "Бретань"
  STATE_15: "Нормандия"
  STATE_16: "Иль-де-Франс"
