--- a/localisation/russian/victory_points_l_russian.yml
+++ b/localisation/russian/victory_points_l_russian.yml
@@ -42,7 +42,7 @@
  VICTORY_POINTS_9692: "Прешпорок"
  VICTORY_POINTS_9660: "Будапешт"
  VICTORY_POINTS_11610: "Печ"
- VICTORY_POINTS_11659: "Дебрецен"
+ VICTORY_POINTS_730: "Дебрецен"
  VICTORY_POINTS_391: "Амстердам"
  VICTORY_POINTS_3211: "Гаага"
  VICTORY_POINTS_9498: "Роттердам"
@@ -184,8 +184,8 @@
  VICTORY_POINTS_3083: "Або"
  VICTORY_POINTS_3122: "Николайштадт"
  VICTORY_POINTS_3137: "Таммерфорс"
- VICTORY_POINTS_9206: "Ревель"
- VICTORY_POINTS_3152: "Таллин"
+ VICTORY_POINTS_9206: "Выборг"
+ VICTORY_POINTS_3152: "Ревель"
  VICTORY_POINTS_9221: "Юрьев"
  VICTORY_POINTS_9340: "Рига"
  VICTORY_POINTS_310: "Двинск"
@@ -1623,7 +1623,7 @@
  VICTORY_POINTS_204: "Ловийса"
  VICTORY_POINTS_6150: "Сортавала"
  VICTORY_POINTS_9105: "Кексгольм"
- VICTORY_POINTS_3060: "Терийоки"
+ VICTORY_POINTS_3060: "Териоки"
  VICTORY_POINTS_9056: "Ювяскюля"
  VICTORY_POINTS_6354: "Орша"
  VICTORY_POINTS_4695: "Ниамей"
@@ -1910,6 +1910,7 @@
  VICTORY_POINTS_3704: "Измаил"
  VICTORY_POINTS_3407: "Хотин"
  VICTORY_POINTS_6600: "Бельцы"
+ VICTORY_POINTS_13203: "Джуно"
 
 
  PETROGRAD_PROV: "Petrograd"
