--- a/localisation/russian/ww1_traits_l_russian.yml
+++ b/localisation/russian/ww1_traits_l_russian.yml
@@ -468,9 +468,8 @@
  judicial_reformer:0 "Судебный реформатор"
  black_baron:0 "Черный барон"
  master_organizer:0 "Главный организатор"
- staunch_traditionalist:0 "Убежденный традиционалист"
  divided_coalition_leader:0 "Лидер разделенной коалиции"
  steadfast_commander:0 "Непоколебимый командир"
  supreme_ruler:0 "Верховный правитель"
  ruthless_commander:0 "Беспощадный командир"
- anti_communist_crusader:0 "Антикоммунистический крестоносец"
+ rus_anti_communist_crusader:0 "$anti_communist_crusader$"
