Bukovina ceding actually gets a response

--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -10268,6 +10268,14 @@ lack_of_passion:0 "Lack of Passion"
  kis_news.142.d: "The 8th Congress of the International was held in Copenhagen, to dicuss the agenda; the stance of socialists regarding the imminent war. The resolution on the struggle against war - "Arbitration Courts and Disarmament" - confirmed the resolution of the Stuttgart Congress of 1907 on "Militarism and International Conflicts", which included the amendments motioned by Lenin and Rosa Luxemburg. These amendments called on the socialists of all countries to use the economic and political crisis caused by war to overthrow the bourgeoisie. The resolution of the Copenhagen Congress also bound the socialist parties and their representatives in parliaments to demand that their governments reduce armaments and settle conflicts between states through arbitration courts. It urged the workers of all countries to stage protests against the threat of war."
  kis_news.142.a: "Do they really think that the war is avoidable?"
 
+kis_news.146.t:0 "[AUH.GetName] cedes Bukovina to the [ROM.GetAdjective]s"
+kis_news.146.desc:0 "[ROM.GetName] cedes Bukovina and North Bukovina to the [ROM.GetAdjective]s, and in return, [ROM.GetName] has to join the Central Powers. This seems like a one-sided deal, as [ROM.GetName] get all the benefits."
+kis_news.146.a:0 "How will the people in Bukovina react?"
+kis_news.146.b:0 "The [ROM.GetAdjective] Rat strikes again..."
+kis_news.146.c:0 "Hello to our new ally!"
+kis_news.146.d:0 "Was this worth it?"
+kis_news.146.e:0 "Hopefully we survive in here."
+
  # Alternative History
  ww1_alternativehistory.1.t: "Instability and Uncertain Future in the Balkans"
  ww1_alternativehistory.1.d: "Every day, more harrowing news comes in from the Austro-Serbian border. Another German storefront with a bomb thrown in, another attack on a Hapsburg official, more vandalism, more looting. Almost all of the arrested criminals have ties to Serbia, and some even allege government instruction. Serbia has been instructed to use its military to keep the peace, but they have done no such thing, and even seem to continue urging these crimes. Kaiser Franz-Josef has sent out to the Serbian Government, demanding full military cooperation with the Austrian army until this issue is resolved."
