--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5317,18 +5317,24 @@ ROM_building_a_new_consensus:0 "Building a New Concensus"
 ROM_what_were_fighting_for:0 "What We're Fighting For"
 ROM_romania_for_those_who_earn_it:0 "Romania For Those Who Earn It"
 ROM_those_who_are_often_forgotten:0 "Those Who Are Often Forgotten"
- ROM_cut_government_bloat:0 "Cut Government Bloat"
+ROM_cut_government_bloat:0 "Cut Government Bloat"
 right_wing_populist:0 "Right Wing Populist"
 ROM_the_crowned_jewl:0 "The Crowned Jewel"
 alexandru_c_cuza:0 "Alexandru Cuza"
 disable_halve_parliment:0 "§RDIsables§! National Focus: '§YHalve Parliaments Seats§!'"
 ROM_no_take_halve:0 "Has promised King that we won't pursue this policy"
 no_happy_few:0 "Has promised King that we won't pursue this policy"
-disable_we_happy_few:0 "§RDIsables§! National Focus: '§YWe Happy Few§!'"
+disable_we_happy_few:0 "§RDisables§! National Focus: '§YWe Happy Few§!'"
 ww1_romania.40.t:0 "Romania Requests Bukovina In Exchange for Joining the Central Powers"
-ww1_romania.40.d:0 "While already signed a defensive pact with us and Germany, Romania would have no obligations to us if an offensive war against the Entente was started by us. Although Romania joining us against Russia was seen as a forgone conclusion a few years ago, its clear Romania has started to drift away from our sphere of influence lately. Today, Romanias ambassador has requested we consider transfering the province of Bukovina to us, in return for offically joining the Central Powers. While Germany is pressuring us to accept Romanias request, it would certainly anger Hungary."
-ww1_romania.40.a:0 "They cannot be serious!"
-ww1_romania.40.b:0 "We don't have a use for this province anyways"
+ww1_romania.40.d:0 "While already signed a defensive pact with us and [GER.GetName], [ROM.GetName] would have no obligations to us if an offensive war against the Entente was started by us. Although [ROM.GetName] joining us against [RUS.GetName] was seen as a forgone conclusion a few years ago, its clear [ROM.GetName] has started to drift away from our sphere of influence lately. Today, [ROM.GetName]'s ambassador has requested we consider transfering the province of Bukovina to us, in return for offically joining the Central Powers. While [GER.GetName] is pressuring us to accept [ROM.GetName]'s' request, it would certainly anger some hungarians."
+ww1_romania.40.a:0 "This is unacceptable!"
+ww1_romania.40.b:0 "We don't have a use for Bukovina anyways"
+ww1_romania.75.t:0 "[AUH.GetName] agrees to cede Bukovina to us!"
+ww1_romania.75.d:0 "[AUH.GetName] has agreed to cede Bukovina to us in exchange of us joining the Central Powers."
+ww1_romania.75.a:0 "Fantastic."
+ww1_romania.76.t:0 "[AUH.GetName] refuses to cede Bukovina"
+ww1_romania.76.d:0 "[Auh.GetName] announced today to our ambassador that ceding Bukovina would anger the Hungarian population."
+ww1_romania.76.a:0 "Hey... Uncool."
 ROM_promote_romanian_nationalism:0 "Co-opt Romanian Nationalism"
 ROM_promote_romanian_nationalism_desc:0 "There are millions of Romanians outside of our borders who live in foreign territory that should really belong to us. To prepare to bring them back home, we need to fan the flames of nationalism of the people both inside and outside our borders"
 ROM_cement_the_churches_status:0 "Cement the Churches Status"
@@ -5337,10 +5343,10 @@ ROM_tax_cuts_for_poor_idea:0 "Tax Cuts for the Poor"
 ROM_tax_cuts_for_the_poor:0 "Relieve the Peasants Burden"
 ROM_tax_cuts_for_the_poor_desc:0 "One of the biggest campaign promises of both the PNL and the PC was to reduce taxes on peasants. With a mandate, its time to fufill this promise and relieve the financial burden of the peasants."
 ww1_romania.18.g:0 "Petre Carp did a decent job once before..."
- ww1_romania.27.t: "King Carol I Has Died"
- ww1_romania.27.d: "King Carol I, the ruler of Romania since it's entire history as a modern country, has died of natural causes today. As the founder of the modern Romanian state as we know it, all of Romania will mourn for him today. He will be remembered for personally leading the Romania army into battle during the Russo-Ottoman war, and securing Romanias independence in 1878. Now, King Ferdinand will become the next king of Romania. An ally of the liberals, the new king will certainly have his influence on Romanian politics"
+ww1_romania.27.t: "King Carol I Has Died"
+ww1_romania.27.d: "King Carol I, the ruler of Romania since it's entire history as a modern country, has died of natural causes today. As the founder of the modern Romanian state as we know it, all of Romania will mourn for him today. He will be remembered for personally leading the Romania army into battle during the Russo-Ottoman war, and securing Romanias independence in 1878. Now, King Ferdinand will become the next king of Romania. An ally of the liberals, the new king will certainly have his influence on Romanian politics"
 ww1_romania.27.a:0 "Să-i fie țărâna ușoară."
- ww1_romania.27.a: "Long live king Ferdinand."
+ww1_romania.27.a: "Long live king Ferdinand."
 ROM_overturn_the_blue_law:0 "Overturn the Blue Law"
 ROM_overturn_the_blue_law_desc:0 "Seperation of church and state is one of the most important principles of the Romanian constitution. The blue law, banning shopping on sundays, is mostly inspired by Christs teachings. While Christains are free to follow this principle, it shouldn't be forced on everyone."
 pcd_leader:0 "Member of the §mPCD§!"
@@ -5528,6 +5534,7 @@ house_win.tt:0 "The King will change course, fully endorsing our government and 
 ROM_consolidate_the_dictatorship:0 "Take the Mask Off"
 ROM_guide_parliament:0 "Intra-Party Democracy"
 ROM_homefront:0 "Homefront"
+
 
 ROM_secure_the_peasants:0 "Secure the Peasants"
 ROM_secure_the_party:0 "Secure the Party"
