--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5333,7 +5333,7 @@ ww1_romania.75.t:0 "[AUH.GetName] agrees to cede Bukovina to us!"
 ww1_romania.75.d:0 "[AUH.GetName] has agreed to cede Bukovina to us in exchange of us joining the Central Powers."
 ww1_romania.75.a:0 "Fantastic."
 ww1_romania.76.t:0 "[AUH.GetName] refuses to cede Bukovina"
-ww1_romania.76.d:0 "[Auh.GetName] announced today to our ambassador that ceding Bukovina would anger the Hungarian population."
+ww1_romania.76.d:0 "[AUH.GetName] announced today to our ambassador that ceding Bukovina would anger the Hungarian population."
 ww1_romania.76.a:0 "Hey... Uncool."
 ROM_promote_romanian_nationalism:0 "Co-opt Romanian Nationalism"
 ROM_promote_romanian_nationalism_desc:0 "There are millions of Romanians outside of our borders who live in foreign territory that should really belong to us. To prepare to bring them back home, we need to fan the flames of nationalism of the people both inside and outside our borders"
